# numen

./: .coderabbit.yaml  .deepsource.toml  .gitignore  Cargo.toml  README.md  coverage.sh  rust-toolchain.toml  testnet-raw.json
.github/actions/ubuntu-dependencies/: action.yml
.github/workflows/: ci.yml  release.yml
consensus/obj-asteroid/src/: lib.rs  perlin.rs  rng.rs
consensus/obj-asteroid/tests/: determinism.rs  spectral.rs
consensus/poscan/: Cargo.toml
consensus/poscan-pow/src/: lib.rs
consensus/poscan/benches/: verify.rs
consensus/poscan/src/: lib.rs
consensus/poscan/tests/: golden.rs
consensus/sc-consensus-pow/: Cargo.toml
consensus/sc-consensus-pow/src/: lib.rs  worker.rs
consensus/sha256pow/src/: lib.rs
docs/contributor/: github-labels.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  eth.rs  main.rs  mining_rpc.rs  rpc.rs  service.rs
pallets/difficulty/src/: asert.rs  lib.rs  mock.rs  tests.rs
pallets/prime/: Cargo.toml
pallets/prime/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/reward/src/: lib.rs  mock.rs  tests.rs
pallets/validator/src/: lib.rs  mock.rs  tests.rs
precompiles/balances-erc20/: Cargo.toml
precompiles/balances-erc20/src/: eip2612.rs  lib.rs  mock.rs  tests.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/macro/tests/compile-fail/precompile/codec/: arg-dont-impl-codec.stderr  no-output.stderr  output-dont-impl-codec.stderr  output-not-result.stderr  output-wrong-error-result.stderr
precompiles/utils/macro/tests/compile-fail/precompile/discriminant/: dont-return-option.stderr  missing-param.stderr  return-incomplete-option.stderr  type-mismatch-1.stderr  type-mismatch-2.stderr
precompiles/utils/macro/tests/compile-fail/precompile/handle/: missing.stderr  set-missing.stderr
precompiles/utils/macro/tests/compile-fail/precompile/pre-check/: no-parameter.stderr  too-many-parameters.stderr
precompiles/utils/tests-external/: Cargo.toml  lib.rs
runtime/: Cargo.toml
runtime/benches/: verify_wasm.rs
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  inherent_checks.rs  lib.rs
runtime/src/configs/: evm.rs  governance.rs  mod.rs
runtime/tests/: evm.rs  fees.rs  governance.rs  identity.rs  opengov.rs  proxy.rs  session_grandpa.rs  vesting.rs
scripts/: h160-to-ss58.sh
tests/evm-tooling/: README.md
tests/evm-tooling/foundry/: README.md
tests/evm-tooling/foundry/src/: Token.sol
tests/evm-tooling/hardhat/: hardhat.config.js  package-lock.json
tests/evm-tooling/hardhat/scripts/: deploy.js
tests/evm-tooling/hardhat/test/: Token.test.js
tests/evm-tooling/hardhat/types/ethers-contracts/: Token.ts
tests/evm-tooling/scripts/: README.md  package.json  transfer-ethers.js
tests/integration/: README.md
tests/integration/js-scripts/: evm-deploy-and-call.js
tests/integration/scripts/: run-all.sh
zombienet/evm-tooling/: README.md
zombienet/evm-tooling/foundry/: README.md  foundry.toml
zombienet/evm-tooling/foundry/script/: Deploy.s.sol
zombienet/evm-tooling/hardhat/: .gitignore  README.md  hardhat.config.js  package.json
zombienet/evm-tooling/hardhat/contracts/: Token.sol
zombienet/evm-tooling/hardhat/test/: NativeErc20.test.js  Token.test.js
zombienet/evm-tooling/hardhat/types/ethers-contracts/: hardhat.d.ts  index.ts
zombienet/evm-tooling/hardhat/types/ethers-contracts/factories/: Token__factory.ts  index.ts
zombienet/evm-tooling/scripts/: README.md  query-web3.js  transfer-ethers.js  transfer-precompile.js  withdraw-to-substrate.js
zombienet/integration/: .gitignore  package-lock.json  package.json  zombienet.toml
zombienet/integration/js-scripts/: check-difficulty-drop.js  check-finality-progress.js  check-fork-finality.js  check-network-agreement.js  evm-precompile-roundtrip.js  lib.js  lock-and-join-dave.js  lock-eve-expect-too-many.js  request-exit-dave.js  wait-for-offline-kick.js
zombienet/integration/scenarios/: 00-basic-and-finality.zndsl  01-validator-lifecycle.zndsl  02-validator-mass-offline.zndsl  03-hashrate-fluctuation.zndsl  04-network-partition.zndsl  05-validator-offline-kick.zndsl  06-max-validators-capacity.zndsl  07-equivocation-placeholder.zndsl  08-evm-tooling.zndsl
zombienet/integration/scenarios/01-miner-reward-and-finality/: miner-reward-and-finality.js
zombienet/integration/scenarios/02-1-miner-validator-decoupled-simultaneous/: miner-validator-decoupled.js  zombienet.zndsl
zombienet/integration/scenarios/02-2-miner-validator-decoupled-alternating/: miner-validator-decoupled.js  zombienet.zndsl
zombienet/integration/scenarios/02-evm-tooling/: evm-tooling.js
zombienet/integration/scenarios/03-evm-tooling/: zombienet.zndsl
zombienet/integration/scripts/: build-node.sh
