[package]
name = "solochain-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-executive.workspace = true
frame-metadata-hash-extension.workspace = true
frame-support = { features = ["experimental"], workspace = true }
frame-system-benchmarking = { optional = true, workspace = true }
frame-system-rpc-runtime-api.workspace = true
frame-system.workspace = true
frame-try-runtime = { optional = true, workspace = true }
hex-literal.workspace = true
pallet-authorship.workspace = true
pallet-balances.workspace = true
pallet-bounties.workspace = true
pallet-child-bounties.workspace = true
pallet-conviction-voting.workspace = true
pallet-difficulty.workspace = true
pallet-grandpa.workspace = true
pallet-im-online.workspace = true
pallet-multisig.workspace = true
pallet-preimage.workspace = true
pallet-prime.workspace = true
pallet-proxy.workspace = true
pallet-referenda.workspace = true
pallet-scheduler.workspace = true
pallet-reward.workspace = true
pallet-session.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-transaction-payment.workspace = true
pallet-treasury.workspace = true
pallet-utility.workspace = true
pallet-validator.workspace = true
pallet-base-fee.workspace = true
pallet-ethereum.workspace = true
pallet-evm.workspace = true
pallet-evm-chain-id.workspace = true
pallet-evm-precompile-bn128.workspace = true
pallet-evm-precompile-modexp.workspace = true
pallet-evm-precompile-sha3fips.workspace = true
pallet-evm-precompile-simple.workspace = true
pallet-evm-precompile-balances-erc20.workspace = true
fp-evm.workspace = true
fp-rpc.workspace = true
fp-self-contained = { workspace = true, features = ["serde"] }
ethereum = { workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
poscan.workspace = true
poscan-pow.workspace = true
sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-grandpa = { features = ["serde"], workspace = true }
sp-consensus-pow.workspace = true
sp-core = { features = ["serde"], workspace = true }
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-keyring.workspace = true
sp-offchain.workspace = true
sp-runtime = { features = ["serde"], workspace = true }
sp-session.workspace = true
sp-staking.workspace = true
sp-storage.workspace = true
sp-timestamp.workspace = true
sp-transaction-pool.workspace = true
sp-version = { features = ["serde"], workspace = true }

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[dev-dependencies]
sp-io = { workspace = true, default-features = true }
serde = { workspace = true, features = ["derive"] }
criterion.workspace = true
sc-executor = { workspace = true, default-features = true }
sp-crypto-hashing = { workspace = true, default-features = true }
cumulus-primitives-proof-size-hostfunction = { workspace = true, default-features = true }

[[bench]]
name = "verify_wasm"
harness = false

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"pallet-child-bounties/std",
	"pallet-conviction-voting/std",
	"pallet-difficulty/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-multisig/std",
	"pallet-preimage/std",
	"pallet-prime/std",
	"pallet-proxy/std",
	"pallet-referenda/std",
	"pallet-scheduler/std",
	"pallet-reward/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-validator/std",
	"pallet-base-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-chain-id/std",
	"pallet-evm-precompile-bn128/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-balances-erc20/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	"ethereum/std",
	"scale-info/std",
	"serde_json/std",
	"poscan/std",
	"poscan-pow/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-grandpa/std",
	"sp-consensus-pow/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-keyring/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-storage/std",
	"sp-timestamp/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]

zombienet-runtime = []

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-difficulty/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-prime/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-reward/runtime-benchmarks",
	"pallet-session/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-validator/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-conviction-voting/try-runtime",
	"pallet-difficulty/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-prime/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-reward/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-validator/try-runtime",
	"pallet-base-fee/try-runtime",
	"pallet-ethereum/try-runtime",
	"pallet-evm/try-runtime",
	"pallet-evm-chain-id/try-runtime",
	"sp-runtime/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
