[package]
name = "sc-consensus-pow"
version = "0.55.0"
description = "PoW consensus algorithm for substrate (vendored for sp-runtime 46 compatibility)"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
codec = { features = ["derive"], workspace = true }
futures.workspace = true
futures-timer.workspace = true
log.workspace = true
parking_lot.workspace = true
substrate-prometheus-endpoint.default-features = true
substrate-prometheus-endpoint.workspace = true
sc-client-api.default-features = true
sc-client-api.workspace = true
sc-consensus.default-features = true
sc-consensus.workspace = true
sp-api.default-features = true
sp-api.workspace = true
sp-block-builder.default-features = true
sp-block-builder.workspace = true
sp-blockchain.default-features = true
sp-blockchain.workspace = true
sp-consensus.default-features = true
sp-consensus.workspace = true
sp-consensus-pow.default-features = true
sp-consensus-pow.workspace = true
sp-core.default-features = true
sp-core.workspace = true
sp-inherents.default-features = true
sp-inherents.workspace = true
sp-runtime.default-features = true
sp-runtime.workspace = true
thiserror.workspace = true
tokio = { features = ["sync"], workspace = true }
