[package]
name = "pallet-prime"
description = "runtime upgrade admin pallet"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
scale-info = { features = ["derive"], workspace = true }

[dev-dependencies]
sp-core.default-features = true
sp-core.workspace = true
sp-externalities.default-features = true
sp-externalities.workspace = true
sp-io.default-features = true
sp-io.workspace = true
sp-runtime.default-features = true
sp-runtime.workspace = true
sp-version.default-features = true
sp-version.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
