[package]
name = "pallet-evm-precompile-balances-erc20"
description = "EVM precompile exposing the native balance pallet as an ERC20 token, with a withdraw helper for arbitrary AccountId32 destinations."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }
pallet-timestamp.workspace = true
fp-evm.workspace = true
precompile-utils = { workspace = true, default-features = false }
sp-core = { features = ["serde"], workspace = true }
sp-io.workspace = true
sp-runtime.workspace = true
scale-info = { features = ["derive"], workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"fp-evm/std",
	"pallet-evm/std",
	"pallet-timestamp/std",
	"precompile-utils/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]

[dev-dependencies]
hex-literal = "1.1.0"
libsecp256k1 = "0.7"
pallet-balances = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
precompile-utils = { workspace = true, features = ["std", "testing"] }
