[package]
name = "precompile-utils"
description = "Utils to write EVM precompiles."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display"], optional = true }
environmental = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true, optional = true }
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
scale-info = { workspace = true, optional = true, features = ["derive"] }
serde = { workspace = true, optional = true }
similar-asserts = { workspace = true, optional = true }

precompile-utils-macro = { path = "macro" }

frame-support = { workspace = true }
frame-system = { workspace = true }
codec = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }

evm = { workspace = true, features = ["with-codec"] }
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
    "environmental/std",
    "fp-evm/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-evm/std",
    "codec/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-weights/std",
    "evm/std",
    "log/std",
    "hex/std",
    "scale-info?/std",
    "serde?/std",
]
testing = ["derive_more", "hex-literal", "scale-info", "serde", "similar-asserts", "std"]
