[package]
name = "precompile-utils-macro"
description = "Procedural macros for precompile-utils."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
case = "1.0"
num_enum = { workspace = true }
prettyplease = "0.2.32"
proc-macro2 = "1.0"
quote = "1.0"
sp-crypto-hashing = { workspace = true }
syn = "2.0"

[dev-dependencies]
trybuild = "1.0"
macrotest = "1.0"
precompile-utils = { path = "..", features = ["std", "testing"] }
sp-core = { workspace = true, features = ["std"] }
fp-evm = { workspace = true, features = ["std"] }
